force-app/main/default/objects/vlocity_cmt__AdSpaceSpecification__c/vlocity_cmt__AdSpaceSpecification__c.object-meta.xml
<CustomObject>
    <description>Defines individual or grouped sections on web pages (for digital ads) or time segments (for television and radio ads) in which a commercial may be delivered.</description>
    <label>Ad Space Specification</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ad Space Specifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>