force-app/main/default/objects/vlocity_cmt__AdSpaceSpecification__c/fields/vlocity_cmt__AdServerAdSpaceIdentifier__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdServerAdSpaceIdentifier__c</fullName>
    <description>For each Ad Space specification, the Ad Server will have a unique name/id which will be captured in this field. Ex : AdUnitId in GAM.</description>
    <externalId>true</externalId>
    <label>AdServer AdSpace Identifier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>