force-app/main/default/objects/vlocity_cmt__AdSpaceSpecification__c/fields/vlocity_cmt__AdServerId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdServerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This captures the Ad Server which serves this Ad Space Specification.</description>
    <label>Ad Server</label>
    <referenceTo>vlocity_cmt__AdServer__c</referenceTo>
    <relationshipLabel>Ad Space Specifications</relationshipLabel>
    <relationshipName>AdSpaceSpecifications</relationshipName>
    <type>Lookup</type>
</CustomField>