force-app/main/default/objects/vlocity_cmt__AdSpaceSpecification__c/fields/vlocity_cmt__AdSpaceType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AdSpaceType__c</fullName>
    <label>Ad Space Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leaderboard</fullName>
            </value>
            <value>
                <fullName>Skyscraper</fullName>
            </value>
            <value>
                <fullName>Graphic Image</fullName>
            </value>
            <value>
                <fullName>Pre-Roll</fullName>
            </value>
            <value>
                <fullName>Mid-Roll</fullName>
            </value>
            <value>
                <fullName>Post-Roll</fullName>
            </value>
            <value>
                <fullName>Full banner WF DFP</fullName>
            </value>
            <value>
                <fullName>1 Page Standard</fullName>
            </value>
            <value>
                <fullName>2 Page Spread</fullName>
            </value>
            <value>
                <fullName>2/3 Page Vertical</fullName>
            </value>
            <value>
                <fullName>1/2 Page Horizontal</fullName>
            </value>
            <value>
                <fullName>Billboard</fullName>
            </value>
            <value>
                <fullName>Spot Buy</fullName>
            </value>
            <value>
                <fullName>Title</fullName>
            </value>
            <value>
                <fullName>Aston</fullName>
            </value>
            <value>
                <fullName>Sting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>