force-app/main/default/objects/vlocity_cmt__AdSpaceSpecification__c/fields/vlocity_cmt__AudienceSizeRating__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AudienceSizeRating__c</fullName>
    <description>Captures the estimated potential reach for the Ad Space specification.</description>
    <label>Audience Size Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>