force-app/main/default/objects/vlocity_cmt__AdSpaceSpecification__c/fields/vlocity_cmt__IsLiveBroadcast__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__IsLiveBroadcast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a Broadcast is a Live or Recorded Telecast.</description>
    <label>Is Live Broadcast</label>
    <type>Checkbox</type>
</CustomField>