force-app/main/default/objects/vlocity_cmt__AdSpaceSpecification__c/fields/vlocity_cmt__MediaContentTitleId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MediaContentTitleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refers to the Media Content Title record.</description>
    <label>Media Content Title</label>
    <referenceTo>vlocity_cmt__MediaContentTitle__c</referenceTo>
    <relationshipLabel>Ad Space Specifications</relationshipLabel>
    <relationshipName>AdSpaceSpecifications</relationshipName>
    <type>Lookup</type>
</CustomField>