force-app/main/default/objects/vlocity_cmt__AdSpaceSpecification__c/fields/vlocity_cmt__Product2Id__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refers to the Product record created for one or more Ad Spaces. The product is added to the Placement and is used to calculate the total cost of the Placement.</description>
    <label>Ad Space Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Ad Space Specifications</relationshipLabel>
    <relationshipName>AdSpaceSpecifications</relationshipName>
    <type>Lookup</type>
</CustomField>