force-app/main/default/objects/vlocity_cmt__AdSpaceSpecification__c/fields/vlocity_cmt__PublisherDayPart__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PublisherDayPart__c</fullName>
    <description>Captures the day time type for the Ad Space Specification. For example, Prime Time and Non-Prime Time.</description>
    <label>Publisher Day Part</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prime Time</fullName>
            </value>
            <value>
                <fullName>Non Prime Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>