force-app/main/default/objects/vlocity_cmt__AdSpaceSpecification__c/fields/vlocity_cmt__StartTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__StartTime__c</fullName>
    <description>Captures the Start Time for the Ad Space specification.</description>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>