force-app/main/default/objects/vlocity_cmt__AdSpaceSpecification__c/recordTypes/vlocity_cmt__AdSpace.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__AdSpace</fullName>
    <active>true</active>
    <description>The Ad Space record type is used to create a single Ad Space Specification record.</description>
    <label>Ad Space</label>
</RecordType>