force-app/main/default/objects/vlocity_cmt__AdSpaceSpecification__c/recordTypes/vlocity_cmt__AdSpaceGroup.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__AdSpaceGroup</fullName>
    <active>true</active>
    <description>The Ad Space Group record type is used to create the Ad Space Specification Group record.</description>
    <label>Ad Space Group</label>
</RecordType>