force-app/main/default/objects/vlocity_cmt__AdSpaceSpecification__c/recordTypes/vlocity_cmt__ScheduledProgram.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__ScheduledProgram</fullName>
    <active>true</active>
    <description>Represents Ad Space specifications for Linear TV and Radio ads during scheduled programs.</description>
    <label>Scheduled Program</label>
</RecordType>