force-app/main/default/objects/vlocity_cmt__AdSpaceSpecification__c/listViews/vlocity_cmt__All.listView-meta.xml
<ListView>
    <fullName>vlocity_cmt__All</fullName>
    <columns>NAME</columns>
    <columns>vlocity_cmt__IsActive__c</columns>
    <columns>vlocity_cmt__AdServerId__c</columns>
    <columns>vlocity_cmt__AdSpaceType__c</columns>
    <columns>vlocity_cmt__MediaPropertyId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>